--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>amqp-client</artifactId>
             <version>5.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
     </dependencies>
 
     <build>
